# spotipyio

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml  tag.yaml  verify.yaml
spotipyio/: __init__.py  spotify_client.py
spotipyio/auth/: client_credentials.py  spotify_session.py
spotipyio/consts/: api_consts.py  env_consts.py  general_consts.py  image_consts.py  spotify_consts.py  typing_consts.py
spotipyio/contract/: __init__.py  base_chunks_collector.py  base_collector.py  base_creator.py  base_manager.py  entity_extractor_interface.py  spotify_component_interface.py
spotipyio/contract/collectors/: base_chunks_collector.py  base_collector.py  base_pagination_collector.py  base_single_collector.py
spotipyio/logic/: __init__.py  spotify_client.py
spotipyio/models/: __init__.py  chunk_size.py
spotipyio/testing/: __init__.py  search_response_builder.py  spotify_mock_factory.py  spotify_test_client.py
spotipyio/tools/: __init__.py  data_chunks_generator.py  image_compressor.py  logging.py  pool_executor.py
spotipyio/utils/: __init__.py  general_utils.py  spotify_utils.py  string_utils.py  web_utils.py
tests/: conftest.py  test_package_version.py  testing_utils.py
tests/authentication/: test_access_token_generator.py  test_client_credentials.py  test_spotify_session.py
tests/managers/: base_chunks_collector_test.py  conftest.py
tests/matching/: test_entity_matcher.py  test_multi_entity_matcher.py
tests/models/: test_matching_entity.py  test_search_item.py  test_search_item_metadata.py
(+129 files in other folders)
