[tool.poetry]
name = "spotipyio"
version = "0.1.0"
description = ""
authors = ["nirgodin <70273595+nirgodin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
aiohttp = ">=3.6.3,<3.9.0"
asyncio-pool = ">=0.6,<1.0"
tqdm = ">=4.65,<5.0"
dataclasses-json = ">=0.6,<1.0"
pillow = ">=10.1,<11.0"
certifi = ">=2023.7.22,<2024.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
